--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Wedding Invitation</title>
+  <link rel="preload" href="public/js/assets/fonts/Binggrae.ttf" as="font" crossorigin/>
+  <link rel="preload" href="public/js/assets/fonts/Binggrae-Bold.ttf" as="font" crossorigin/>
+  <link rel="preload" href="public/js/assets/fonts/CormorantSC-SemiBold.ttf" as="font" crossorigin/>
   <link rel="stylesheet" href="public/style.css">
-  <link rel="preload" href="public/js/assets/fonts/Binggrae.ttf" as="font" />
-  <link rel="preload" href="public/js/assets/fonts/Binggrae-Bold.ttf" as="font" />
-  <link rel="preload" href="public/js/assets/fonts/CormorantSC-SemiBold.ttf" as="font" />
 </head>
 
 <body>
