--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Wedding Invitation</title>
+  <meta meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
+  <title>Wedding-Invite</title>
   <link rel="preload" href="public/js/assets/fonts/Binggrae.ttf" as="font" crossorigin/>
   <link rel="preload" href="public/js/assets/fonts/Binggrae-Bold.ttf" as="font" crossorigin/>
   <link rel="preload" href="public/js/assets/fonts/CormorantSC-SemiBold.ttf" as="font" crossorigin/>
