--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-  <title>Minho and Yoonkyung's Wedding: May 28 2018 Memorial Day 7PM</title>
+  <title>Wedding-Invite</title>
   <link rel="preload" href="public/js/assets/fonts/Binggrae.ttf" as="font" crossorigin/>
   <link rel="preload" href="public/js/assets/fonts/Binggrae-Bold.ttf" as="font" crossorigin/>
   <link rel="preload" href="public/js/assets/fonts/CormorantSC-SemiBold.ttf" as="font" crossorigin/>
-  <link rel="preload" href="public/style.css" as="style" onload="this.rel='stylesheet'">
+  <link rel="stylesheet" href="public/style.css">
 </head>
 
 <body>
   <div id="app">
   </div>
-  <script src="public/bundle.js" async></script>
+  <script src="public/bundle.js"></script>
 </body>
 
 </html>
